# SCI

./: .gitignore  PRESENTATION.md  README.md  _build_notebooks.py  analysis_utils.py  app.py  collect_comments.py  collect_posts.py  dashboard.py  kiq_2_2_bigrams.py  kiq_3_1_timeline.py  kiq_3_2_bigrams.py  kiq_3_2_small_n.py  kiq_3_3_bigrams.py  kiq_3_3_stacked_bar.py  kiq_3_3_subreddit_views.py  kiq_3_3_thread_views.py  kiq_3_3_where.py  label_kiq.py  llm_utils.py  make_wordclouds.py  preprocess.py  pyproject.toml  sample.txt
data/llm_cache/: kiq_2_2_comments.csv  kiq_2_2_posts.csv  kiq_3_2_comments.csv  kiq_3_2_posts.csv  kiq_3_3_comments.csv  kiq_3_3_posts.csv
data/raw/: reddit_posts.csv
kiq_3_1/: data.csv
notebooks/: kiq_2_2_brand_share.ipynb  kiq_3_2_name_tag_sentiment.ipynb  kiq_3_3_privacy_volume_tone.ipynb
outputs/kiq_2_2/: kiq_2_2_bigrams_all_meta_themed.csv  kiq_2_2_bigrams_neg_comments_themed.csv  kiq_2_2_bigrams_neg_meta_themed.csv  kiq_2_2_bigrams_neg_posts_themed.csv  kiq_2_2_bigrams_pos_comments_themed.csv  kiq_2_2_bigrams_pos_posts_themed.csv  kiq_2_2_brand_share.csv  kiq_2_2_brand_subreddit.csv  kiq_2_2_dropped_comments.csv  kiq_2_2_dropped_posts.csv  kiq_2_2_filter_log.csv  kiq_2_2_privacy_share.csv  kiq_2_2_scored_comments.csv  kiq_2_2_scored_posts.csv  kiq_2_2_sentiment_per_brand.csv  kiq_2_2_unigrams_all_meta_themed.csv  kiq_2_2_unigrams_neg_comments_themed.csv  kiq_2_2_unigrams_neg_meta_themed.csv  kiq_2_2_unigrams_neg_posts_themed.csv  kiq_2_2_unigrams_pos_comments_themed.csv  kiq_2_2_unigrams_pos_posts_themed.csv
(+31 files in other folders)
