[project]
name = "sci"
version = "0.1.0"
description = "Reddit scraping pipeline for Meta AI Smart Glasses SCI project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9",
    "jupyter>=1.1",
    "ipykernel>=6.30",
    "shiny>=1.6.1",
]
